fix: add delete bound device operation
